istio/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test 
  namespace: default
spec:
  containers:
  - name: test 
    image: curlimages/curl
    command:
      - sleep
      - "3600"
