istio/hello.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  labels:
    app: hello
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v1
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      containers:
      - name: hello
        image: ironcore864/go-hello-http:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
  labels:
    app: hello
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v2
  template:
    metadata:
      labels:
        app: hello
        version: v2
    spec:
      containers:
      - name: hello
        image: ironcore864/go-hello-http:latest
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello
