istio/vs.yaml
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: hello
# spec:
#   hosts:
#   - hello
#   http:
#   - route:
#     - destination:
#         host: hello
#         subset: v1
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
    - hello
  http:
  - route:
    - destination:
        host: hello
        subset: v1
      weight: 99
    - destination:
        host: hello
        subset: v2
      weight: 1
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: hello
# spec:
#   hosts:
#     - hello
#   http:
#   - route:
#     - destination:
#         host: hello
#         subset: v2
